fixed icons not showing up correctly in google maps

--- a/fluxtream-web/src/main/webapp/less/bootstrapCustomizations.less
+++ b/fluxtream-web/src/main/webapp/less/bootstrapCustomizations.less
@@ -135,3 +135,7 @@ li [class^="icon-"], li [class*=" icon-"] {
 li .icon-large[class^="icon-"], li .icon-large[class*=" icon-"] {
   width: 1.875em;
 }
+
+[class^="icon-"], [class*=" icon-"]{
+  font-family: FontAwesome !important;
+}
